native_math/frb_generated.h

typedef struct wire_cst_list_prim_f_64_strict {
  double *ptr;
  int32_t len;
} wire_cst_list_prim_f_64_strict;
typedef struct wire_cst_list_list_prim_f_64_strict {
  struct wire_cst_list_prim_f_64_strict **ptr;
  int32_t len;
} wire_cst_list_list_prim_f_64_strict;
typedef struct wire_cst_list_prim_f_64_loose {
  double *ptr;
  int32_t len;
} wire_cst_list_prim_f_64_loose;
typedef struct wire_cst_list_prim_u_8_strict {
  uint8_t *ptr;
  int32_t len;
} wire_cst_list_prim_u_8_strict;
typedef struct wire_cst_list_String {
  struct wire_cst_list_prim_u_8_strict **ptr;
  int32_t len;
} wire_cst_list_String;
typedef struct wire_cst_record_string_f_64 {
  struct wire_cst_list_prim_u_8_strict *field0;
  double field1;
} wire_cst_record_string_f_64;
typedef struct wire_cst_list_record_string_f_64 {
  struct wire_cst_record_string_f_64 *ptr;
  int32_t len;
} wire_cst_list_record_string_f_64;
typedef struct wire_cst_graph_point {
  double x;
  double y;
  bool valid;
} wire_cst_graph_point;
typedef struct wire_cst_list_graph_point {
  struct wire_cst_graph_point *ptr;
  int32_t len;
} wire_cst_list_graph_point;
typedef struct wire_cst_matrix_result {
  bool success;
  struct wire_cst_list_prim_f_64_strict *data;
  uintptr_t rows;
  uintptr_t cols;
  double *scalar;
  struct wire_cst_list_prim_u_8_strict *error;
} wire_cst_matrix_result;
typedef struct wire_cst_list_matrix_result {
  struct wire_cst_matrix_result *ptr;
  int32_t len;
} wire_cst_list_matrix_result;
typedef struct wire_cst_list_prim_u_64_strict {
  uint64_t *ptr;
  int32_t len;
} wire_cst_list_prim_u_64_strict;
typedef struct wire_cst_record_f_64_f_64 {
  double field0;
  double field1;
} wire_cst_record_f_64_f_64;
typedef struct wire_cst_list_record_f_64_f_64 {
  struct wire_cst_record_f_64_f_64 *ptr;
  int32_t len;
} wire_cst_list_record_f_64_f_64;
typedef struct wire_cst_unit_result {
  bool success;
  double value;
  struct wire_cst_list_prim_u_8_strict *from_unit;
  struct wire_cst_list_prim_u_8_strict *to_unit;
  struct wire_cst_list_prim_u_8_strict *formula;
  struct wire_cst_list_prim_u_8_strict *error;
} wire_cst_unit_result;
typedef struct wire_cst_list_unit_result {
  struct wire_cst_unit_result *ptr;
  int32_t len;
} wire_cst_list_unit_result;
void frbgen_kivixa_wire__crate__api__triple_integral(int64_t port_,
                                                     struct wire_cst_list_prim_u_8_strict *expression,
                                                     struct wire_cst_list_prim_u_8_strict *x_var,
                                                     struct wire_cst_list_prim_u_8_strict *y_var,
                                                     struct wire_cst_list_prim_u_8_strict *z_var,
                                                     double x_min,
                                                     double x_max,
                                                     double y_min,
                                                     double y_max,
                                                     double z_min,
                                                     double z_max,
                                                     uint32_t num_intervals);
void frbgen_kivixa_wire__crate__api__two_sample_t_test(int64_t port_,
                                                       struct wire_cst_list_prim_f_64_loose *data1,
                                                       struct wire_cst_list_prim_f_64_loose *data2,
                                                       double alpha);
void frbgen_kivixa_wire__crate__api__two_sample_z_test(int64_t port_,
                                                       struct wire_cst_list_prim_f_64_loose *data1,
                                                       struct wire_cst_list_prim_f_64_loose *data2,
                                                       double std1,
                                                       double std2,
                                                       double alpha);
void frbgen_kivixa_wire__crate__api__z_test(int64_t port_,
                                            struct wire_cst_list_prim_f_64_loose *data,
                                            double hypothesized_mean,
                                            double population_std,
                                            double alpha);
bool *frbgen_kivixa_cst_new_box_autoadd_bool(bool value);
double *frbgen_kivixa_cst_new_box_autoadd_f_64(double value);
uintptr_t *frbgen_kivixa_cst_new_box_autoadd_usize(uintptr_t value);
struct wire_cst_list_String *frbgen_kivixa_cst_new_list_String(int32_t len);
struct wire_cst_list_graph_point *frbgen_kivixa_cst_new_list_graph_point(int32_t len);
struct wire_cst_list_list_prim_f_64_strict *frbgen_kivixa_cst_new_list_list_prim_f_64_strict(int32_t len);
struct wire_cst_list_matrix_result *frbgen_kivixa_cst_new_list_matrix_result(int32_t len);
struct wire_cst_list_prim_f_64_loose *frbgen_kivixa_cst_new_list_prim_f_64_loose(int32_t len);
struct wire_cst_list_prim_f_64_strict *frbgen_kivixa_cst_new_list_prim_f_64_strict(int32_t len);
struct wire_cst_list_prim_u_64_strict *frbgen_kivixa_cst_new_list_prim_u_64_strict(int32_t len);
struct wire_cst_list_prim_u_8_strict *frbgen_kivixa_cst_new_list_prim_u_8_strict(int32_t len);
struct wire_cst_list_record_f_64_f_64 *frbgen_kivixa_cst_new_list_record_f_64_f_64(int32_t len);
struct wire_cst_list_record_string_f_64 *frbgen_kivixa_cst_new_list_record_string_f_64(int32_t len);
struct wire_cst_list_unit_result *frbgen_kivixa_cst_new_list_unit_result(int32_t len);
static int64_t dummy_method_to_enforce_bundling(void) {
    int64_t dummy_var = 0;
    dummy_var ^= ((int64_t) (void*) frbgen_kivixa_cst_new_box_autoadd_bool);
    dummy_var ^= ((int64_t) (void*) frbgen_kivixa_cst_new_box_autoadd_f_64);
    dummy_var ^= ((int64_t) (void*) frbgen_kivixa_cst_new_box_autoadd_usize);
    dummy_var ^= ((int64_t) (void*) frbgen_kivixa_cst_new_list_String);
    dummy_var ^= ((int64_t) (void*) frbgen_kivixa_cst_new_list_graph_point);
    dummy_var ^= ((int64_t) (void*) frbgen_kivixa_cst_new_list_list_prim_f_64_strict);
    dummy_var ^= ((int64_t) (void*) frbgen_kivixa_cst_new_list_matrix_result);
    dummy_var ^= ((int64_t) (void*) frbgen_kivixa_cst_new_list_prim_f_64_loose);
    dummy_var ^= ((int64_t) (void*) frbgen_kivixa_cst_new_list_prim_f_64_strict);
    dummy_var ^= ((int64_t) (void*) frbgen_kivixa_cst_new_list_prim_u_64_strict);
    dummy_var ^= ((int64_t) (void*) frbgen_kivixa_cst_new_list_prim_u_8_strict);
    dummy_var ^= ((int64_t) (void*) frbgen_kivixa_cst_new_list_record_f_64_f_64);
    dummy_var ^= ((int64_t) (void*) frbgen_kivixa_cst_new_list_record_string_f_64);
    dummy_var ^= ((int64_t) (void*) frbgen_kivixa_cst_new_list_unit_result);
    dummy_var ^= ((int64_t) (void*) frbgen_kivixa_wire__crate__api__anova);
    dummy_var ^= ((int64_t) (void*) frbgen_kivixa_wire__crate__api__catalan);
    dummy_var ^= ((int64_t) (void*) frbgen_kivixa_wire__crate__api__chi_squared_test);
    dummy_var ^= ((int64_t) (void*) frbgen_kivixa_wire__crate__api__combinations);
    dummy_var ^= ((int64_t) (void*) frbgen_kivixa_wire__crate__api__complex_convert);
    dummy_var ^= ((int64_t) (void*) frbgen_kivixa_wire__crate__api__complex_operation);
    dummy_var ^= ((int64_t) (void*) frbgen_kivixa_wire__crate__api__compute_limit);
    dummy_var ^= ((int64_t) (void*) frbgen_kivixa_wire__crate__api__compute_statistics);
    dummy_var ^= ((int64_t) (void*) frbgen_kivixa_wire__crate__api__confidence_interval_mean);
    dummy_var ^= ((int64_t) (void*) frbgen_kivixa_wire__crate__api__confidence_interval_proportion);
    dummy_var ^= ((int64_t) (void*) frbgen_kivixa_wire__crate__api__confidence_interval_variance);
    dummy_var ^= ((int64_t) (void*) frbgen_kivixa_wire__crate__api__convert_number_system);
    dummy_var ^= ((int64_t) (void*) frbgen_kivixa_wire__crate__api__convert_to_all_units);
    dummy_var ^= ((int64_t) (void*) frbgen_kivixa_wire__crate__api__convert_unit);
    dummy_var ^= ((int64_t) (void*) frbgen_kivixa_wire__crate__api__correlation_covariance);
    dummy_var ^= ((int64_t) (void*) frbgen_kivixa_wire__crate__api__derivative_graph);
    dummy_var ^= ((int64_t) (void*) frbgen_kivixa_wire__crate__api__differentiate);
    dummy_var ^= ((int64_t) (void*) frbgen_kivixa_wire__crate__api__distribution_compute);
    dummy_var ^= ((int64_t) (void*) frbgen_kivixa_wire__crate__api__double_integral);
    dummy_var ^= ((int64_t) (void*) frbgen_kivixa_wire__crate__api__euler_totient);
    dummy_var ^= ((int64_t) (void*) frbgen_kivixa_wire__crate__api__evaluate_expression);
    dummy_var ^= ((int64_t) (void*) frbgen_kivixa_wire__crate__api__evaluate_formula);
    dummy_var ^= ((int64_t) (void*) frbgen_kivixa_wire__crate__api__evaluate_graph_points);
    dummy_var ^= ((int64_t) (void*) frbgen_kivixa_wire__crate__api__factorial);
    dummy_var ^= ((int64_t) (void*) frbgen_kivixa_wire__crate__api__fibonacci);
    dummy_var ^= ((int64_t) (void*) frbgen_kivixa_wire__crate__api__find_extrema);
    dummy_var ^= ((int64_t) (void*) frbgen_kivixa_wire__crate__api__find_graph_roots);
    dummy_var ^= ((int64_t) (void*) frbgen_kivixa_wire__crate__api__find_roots_in_interval);
    dummy_var ^= ((int64_t) (void*) frbgen_kivixa_wire__crate__api__gcd);
    dummy_var ^= ((int64_t) (void*) frbgen_kivixa_wire__crate__api__generate_x_range);
    dummy_var ^= ((int64_t) (void*) frbgen_kivixa_wire__crate__api__get_constant);
    dummy_var ^= ((int64_t) (void*) frbgen_kivixa_wire__crate__api__get_unit_categories);
    dummy_var ^= ((int64_t) (void*) frbgen_kivixa_wire__crate__api__get_units_for_category);
    dummy_var ^= ((int64_t) (void*) frbgen_kivixa_wire__crate__api__gradient);
    dummy_var ^= ((int64_t) (void*) frbgen_kivixa_wire__crate__api__init_app);
    dummy_var ^= ((int64_t) (void*) frbgen_kivixa_wire__crate__api__integral_graph);
    dummy_var ^= ((int64_t) (void*) frbgen_kivixa_wire__crate__api__integrate);
    dummy_var ^= ((int64_t) (void*) frbgen_kivixa_wire__crate__api__is_perfect);
    dummy_var ^= ((int64_t) (void*) frbgen_kivixa_wire__crate__api__is_prime);
    dummy_var ^= ((int64_t) (void*) frbgen_kivixa_wire__crate__api__lcm);
    dummy_var ^= ((int64_t) (void*) frbgen_kivixa_wire__crate__api__line_integral);
    dummy_var ^= ((int64_t) (void*) frbgen_kivixa_wire__crate__api__linear_regression);
    dummy_var ^= ((int64_t) (void*) frbgen_kivixa_wire__crate__api__list_divisors);
    dummy_var ^= ((int64_t) (void*) frbgen_kivixa_wire__crate__api__matrix_decomposition);
    dummy_var ^= ((int64_t) (void*) frbgen_kivixa_wire__crate__api__matrix_operation);
    dummy_var ^= ((int64_t) (void*) frbgen_kivixa_wire__crate__api__matrix_properties);
    dummy_var ^= ((int64_t) (void*) frbgen_kivixa_wire__crate__api__matrix_rref);
    dummy_var ^= ((int64_t) (void*) frbgen_kivixa_wire__crate__api__mixed_partial_derivative);
    dummy_var ^= ((int64_t) (void*) frbgen_kivixa_wire__crate__api__mod_add);
    dummy_var ^= ((int64_t) (void*) frbgen_kivixa_wire__crate__api__mod_divide);
    dummy_var ^= ((int64_t) (void*) frbgen_kivixa_wire__crate__api__mod_inverse);
    dummy_var ^= ((int64_t) (void*) frbgen_kivixa_wire__crate__api__mod_multiply);
    dummy_var ^= ((int64_t) (void*) frbgen_kivixa_wire__crate__api__mod_pow);
    dummy_var ^= ((int64_t) (void*) frbgen_kivixa_wire__crate__api__mod_sub);
    dummy_var ^= ((int64_t) (void*) frbgen_kivixa_wire__crate__api__parse_formula);
    dummy_var ^= ((int64_t) (void*) frbgen_kivixa_wire__crate__api__partial_derivative);
    dummy_var ^= ((int64_t) (void*) frbgen_kivixa_wire__crate__api__permutations);
    dummy_var ^= ((int64_t) (void*) frbgen_kivixa_wire__crate__api__polynomial_regression);
    dummy_var ^= ((int64_t) (void*) frbgen_kivixa_wire__crate__api__prime_factors);
    dummy_var ^= ((int64_t) (void*) frbgen_kivixa_wire__crate__api__sieve_primes);
    dummy_var ^= ((int64_t) (void*) frbgen_kivixa_wire__crate__api__solve_equation);
    dummy_var ^= ((int64_t) (void*) frbgen_kivixa_wire__crate__api__t_test);
    dummy_var ^= ((int64_t) (void*) frbgen_kivixa_wire__crate__api__taylor_coefficients);
    dummy_var ^= ((int64_t) (void*) frbgen_kivixa_wire__crate__api__triple_integral);
    dummy_var ^= ((int64_t) (void*) frbgen_kivixa_wire__crate__api__two_sample_t_test);
    dummy_var ^= ((int64_t) (void*) frbgen_kivixa_wire__crate__api__two_sample_z_test);
    dummy_var ^= ((int64_t) (void*) frbgen_kivixa_wire__crate__api__z_test);
    dummy_var ^= ((int64_t) (void*) store_dart_post_cobject);
    return dummy_var;
}