lib/src/rust_math/frb_generated.io.dart


  late final _wire__crate__api__triple_integralPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Int64,
            ffi.Pointer<wire_cst_list_prim_u_8_strict>,
            ffi.Pointer<wire_cst_list_prim_u_8_strict>,
            ffi.Pointer<wire_cst_list_prim_u_8_strict>,
            ffi.Pointer<wire_cst_list_prim_u_8_strict>,
            ffi.Double,
            ffi.Double,
            ffi.Double,
            ffi.Double,
            ffi.Double,
            ffi.Double,
            ffi.Uint32,
          )
        >
      >('frbgen_kivixa_wire__crate__api__triple_integral');
  late final _wire__crate__api__triple_integral =
      _wire__crate__api__triple_integralPtr
          .asFunction<
            void Function(
              int,
              ffi.Pointer<wire_cst_list_prim_u_8_strict>,
              ffi.Pointer<wire_cst_list_prim_u_8_strict>,
              ffi.Pointer<wire_cst_list_prim_u_8_strict>,
              ffi.Pointer<wire_cst_list_prim_u_8_strict>,
              double,
              double,
              double,
              double,
              double,
              double,
              int,
            )
          >();

  void wire__crate__api__two_sample_t_test(
    int port_,
    ffi.Pointer<wire_cst_list_prim_f_64_loose> data1,
    ffi.Pointer<wire_cst_list_prim_f_64_loose> data2,
    double alpha,
  ) {
    return _wire__crate__api__two_sample_t_test(port_, data1, data2, alpha);
  }

  late final _wire__crate__api__two_sample_t_testPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Int64,
            ffi.Pointer<wire_cst_list_prim_f_64_loose>,
            ffi.Pointer<wire_cst_list_prim_f_64_loose>,
            ffi.Double,
          )
        >
      >('frbgen_kivixa_wire__crate__api__two_sample_t_test');
  late final _wire__crate__api__two_sample_t_test =
      _wire__crate__api__two_sample_t_testPtr
          .asFunction<
            void Function(
              int,
              ffi.Pointer<wire_cst_list_prim_f_64_loose>,
              ffi.Pointer<wire_cst_list_prim_f_64_loose>,
              double,
            )
          >();

  void wire__crate__api__two_sample_z_test(
    int port_,
    ffi.Pointer<wire_cst_list_prim_f_64_loose> data1,
    ffi.Pointer<wire_cst_list_prim_f_64_loose> data2,
    double std1,
    double std2,
    double alpha,
  ) {
    return _wire__crate__api__two_sample_z_test(
      port_,
      data1,
      data2,
      std1,
      std2,
      alpha,
    );
  }

  late final _wire__crate__api__two_sample_z_testPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Int64,
            ffi.Pointer<wire_cst_list_prim_f_64_loose>,
            ffi.Pointer<wire_cst_list_prim_f_64_loose>,
            ffi.Double,
            ffi.Double,
            ffi.Double,
          )
        >
      >('frbgen_kivixa_wire__crate__api__two_sample_z_test');
  late final _wire__crate__api__two_sample_z_test =
      _wire__crate__api__two_sample_z_testPtr
          .asFunction<
            void Function(
              int,
              ffi.Pointer<wire_cst_list_prim_f_64_loose>,
              ffi.Pointer<wire_cst_list_prim_f_64_loose>,
              double,
              double,
              double,
            )
          >();

  void wire__crate__api__z_test(
    int port_,
    ffi.Pointer<wire_cst_list_prim_f_64_loose> data,
    double hypothesized_mean,
    double population_std,
    double alpha,
  ) {
    return _wire__crate__api__z_test(
      port_,
      data,
      hypothesized_mean,
      population_std,
      alpha,
    );
  }

  late final _wire__crate__api__z_testPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Int64,
            ffi.Pointer<wire_cst_list_prim_f_64_loose>,
            ffi.Double,
            ffi.Double,
            ffi.Double,
          )
        >
      >('frbgen_kivixa_wire__crate__api__z_test');
  late final _wire__crate__api__z_test = _wire__crate__api__z_testPtr
      .asFunction<
        void Function(
          int,
          ffi.Pointer<wire_cst_list_prim_f_64_loose>,
          double,
          double,
          double,
        )
      >();

  ffi.Pointer<ffi.Bool> cst_new_box_autoadd_bool(bool value) {
    return _cst_new_box_autoadd_bool(value);
  }

  late final _cst_new_box_autoadd_boolPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Bool> Function(ffi.Bool)>>(
        'frbgen_kivixa_cst_new_box_autoadd_bool',
      );
  late final _cst_new_box_autoadd_bool = _cst_new_box_autoadd_boolPtr
      .asFunction<ffi.Pointer<ffi.Bool> Function(bool)>();

  ffi.Pointer<ffi.Double> cst_new_box_autoadd_f_64(double value) {
    return _cst_new_box_autoadd_f_64(value);
  }

  late final _cst_new_box_autoadd_f_64Ptr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Double> Function(ffi.Double)>>(
        'frbgen_kivixa_cst_new_box_autoadd_f_64',
      );
  late final _cst_new_box_autoadd_f_64 = _cst_new_box_autoadd_f_64Ptr
      .asFunction<ffi.Pointer<ffi.Double> Function(double)>();

  ffi.Pointer<ffi.UintPtr> cst_new_box_autoadd_usize(int value) {
    return _cst_new_box_autoadd_usize(value);
  }

  late final _cst_new_box_autoadd_usizePtr =
      _lookup<
        ffi.NativeFunction<ffi.Pointer<ffi.UintPtr> Function(ffi.UintPtr)>
      >('frbgen_kivixa_cst_new_box_autoadd_usize');
  late final _cst_new_box_autoadd_usize = _cst_new_box_autoadd_usizePtr
      .asFunction<ffi.Pointer<ffi.UintPtr> Function(int)>();

  ffi.Pointer<wire_cst_list_String> cst_new_list_String(int len) {
    return _cst_new_list_String(len);
  }

  late final _cst_new_list_StringPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<wire_cst_list_String> Function(ffi.Int32)
        >
      >('frbgen_kivixa_cst_new_list_String');
  late final _cst_new_list_String = _cst_new_list_StringPtr
      .asFunction<ffi.Pointer<wire_cst_list_String> Function(int)>();

  ffi.Pointer<wire_cst_list_graph_point> cst_new_list_graph_point(int len) {
    return _cst_new_list_graph_point(len);
  }

  late final _cst_new_list_graph_pointPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<wire_cst_list_graph_point> Function(ffi.Int32)
        >
      >('frbgen_kivixa_cst_new_list_graph_point');
  late final _cst_new_list_graph_point = _cst_new_list_graph_pointPtr
      .asFunction<ffi.Pointer<wire_cst_list_graph_point> Function(int)>();

  ffi.Pointer<wire_cst_list_list_prim_f_64_strict>
  cst_new_list_list_prim_f_64_strict(int len) {
    return _cst_new_list_list_prim_f_64_strict(len);
  }

  late final _cst_new_list_list_prim_f_64_strictPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<wire_cst_list_list_prim_f_64_strict> Function(ffi.Int32)
        >
      >('frbgen_kivixa_cst_new_list_list_prim_f_64_strict');
  late final _cst_new_list_list_prim_f_64_strict =
      _cst_new_list_list_prim_f_64_strictPtr
          .asFunction<
            ffi.Pointer<wire_cst_list_list_prim_f_64_strict> Function(int)
          >();

  ffi.Pointer<wire_cst_list_matrix_result> cst_new_list_matrix_result(int len) {
    return _cst_new_list_matrix_result(len);
  }

  late final _cst_new_list_matrix_resultPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<wire_cst_list_matrix_result> Function(ffi.Int32)
        >
      >('frbgen_kivixa_cst_new_list_matrix_result');
  late final _cst_new_list_matrix_result = _cst_new_list_matrix_resultPtr
      .asFunction<ffi.Pointer<wire_cst_list_matrix_result> Function(int)>();

  ffi.Pointer<wire_cst_list_prim_f_64_loose> cst_new_list_prim_f_64_loose(
    int len,
  ) {
    return _cst_new_list_prim_f_64_loose(len);
  }

  late final _cst_new_list_prim_f_64_loosePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<wire_cst_list_prim_f_64_loose> Function(ffi.Int32)
        >
      >('frbgen_kivixa_cst_new_list_prim_f_64_loose');
  late final _cst_new_list_prim_f_64_loose = _cst_new_list_prim_f_64_loosePtr
      .asFunction<ffi.Pointer<wire_cst_list_prim_f_64_loose> Function(int)>();

  ffi.Pointer<wire_cst_list_prim_f_64_strict> cst_new_list_prim_f_64_strict(
    int len,
  ) {
    return _cst_new_list_prim_f_64_strict(len);
  }

  late final _cst_new_list_prim_f_64_strictPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<wire_cst_list_prim_f_64_strict> Function(ffi.Int32)
        >
      >('frbgen_kivixa_cst_new_list_prim_f_64_strict');
  late final _cst_new_list_prim_f_64_strict = _cst_new_list_prim_f_64_strictPtr
      .asFunction<ffi.Pointer<wire_cst_list_prim_f_64_strict> Function(int)>();

  ffi.Pointer<wire_cst_list_prim_u_64_strict> cst_new_list_prim_u_64_strict(
    int len,
  ) {
    return _cst_new_list_prim_u_64_strict(len);
  }

  late final _cst_new_list_prim_u_64_strictPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<wire_cst_list_prim_u_64_strict> Function(ffi.Int32)
        >
      >('frbgen_kivixa_cst_new_list_prim_u_64_strict');
  late final _cst_new_list_prim_u_64_strict = _cst_new_list_prim_u_64_strictPtr
      .asFunction<ffi.Pointer<wire_cst_list_prim_u_64_strict> Function(int)>();

  ffi.Pointer<wire_cst_list_prim_u_8_strict> cst_new_list_prim_u_8_strict(
    int len,
  ) {
    return _cst_new_list_prim_u_8_strict(len);
  }

  late final _cst_new_list_prim_u_8_strictPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<wire_cst_list_prim_u_8_strict> Function(ffi.Int32)
        >
      >('frbgen_kivixa_cst_new_list_prim_u_8_strict');
  late final _cst_new_list_prim_u_8_strict = _cst_new_list_prim_u_8_strictPtr
      .asFunction<ffi.Pointer<wire_cst_list_prim_u_8_strict> Function(int)>();

  ffi.Pointer<wire_cst_list_record_f_64_f_64> cst_new_list_record_f_64_f_64(
    int len,
  ) {
    return _cst_new_list_record_f_64_f_64(len);
  }

  late final _cst_new_list_record_f_64_f_64Ptr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<wire_cst_list_record_f_64_f_64> Function(ffi.Int32)
        >
      >('frbgen_kivixa_cst_new_list_record_f_64_f_64');
  late final _cst_new_list_record_f_64_f_64 = _cst_new_list_record_f_64_f_64Ptr
      .asFunction<ffi.Pointer<wire_cst_list_record_f_64_f_64> Function(int)>();

  ffi.Pointer<wire_cst_list_record_string_f_64> cst_new_list_record_string_f_64(
    int len,
  ) {
    return _cst_new_list_record_string_f_64(len);
  }

  late final _cst_new_list_record_string_f_64Ptr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<wire_cst_list_record_string_f_64> Function(ffi.Int32)
        >
      >('frbgen_kivixa_cst_new_list_record_string_f_64');
  late final _cst_new_list_record_string_f_64 =
      _cst_new_list_record_string_f_64Ptr
          .asFunction<
            ffi.Pointer<wire_cst_list_record_string_f_64> Function(int)
          >();

  ffi.Pointer<wire_cst_list_unit_result> cst_new_list_unit_result(int len) {
    return _cst_new_list_unit_result(len);
  }

  late final _cst_new_list_unit_resultPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<wire_cst_list_unit_result> Function(ffi.Int32)
        >
      >('frbgen_kivixa_cst_new_list_unit_result');
  late final _cst_new_list_unit_result = _cst_new_list_unit_resultPtr
      .asFunction<ffi.Pointer<wire_cst_list_unit_result> Function(int)>();

  int dummy_method_to_enforce_bundling() {
    return _dummy_method_to_enforce_bundling();
  }

  late final _dummy_method_to_enforce_bundlingPtr =
      _lookup<ffi.NativeFunction<ffi.Int64 Function()>>(
        'dummy_method_to_enforce_bundling',
      );
  late final _dummy_method_to_enforce_bundling =
      _dummy_method_to_enforce_bundlingPtr.asFunction<int Function()>();
}
